--- a/django_chat/chat/templates/chat/room.html
+++ b/django_chat/chat/templates/chat/room.html
@@ -17,7 +17,7 @@
 <script type="text/javascript">
         const roomName = JSON.parse(document.getElementById('room-name').textContent);
         const username = JSON.parse(document.getElementById('username').textContent);
-        const chatWebsocket = new WebSocket('ws://' + window.location.host + '/ws/' + 'chat/' + roomName +'/');
+        const chatWebsocket = new WebSocket('wss://' + window.location.host + '/ws/' + 'chat/' + roomName +'/');
 
         chatWebsocket.onmessage = function(e) {
             const data = JSON.parse(e.data)
